--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "An Rx-version of child_process.spawn",
   "scripts": {
+    "doc": "esdoc -c ./esdoc.json",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "mocha --compilers js:babel-register ./test/*"
@@ -34,6 +35,9 @@
     "babel-register": "^6.4.3",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
+    "esdoc": "^0.4.3",
+    "esdoc-es7-plugin": "0.0.3",
+    "esdoc-plugin-async-to-sync": "^0.5.0",
     "eslint": "^1.10.3",
     "mocha": "^2.3.4"
   }
