--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
   "main": "lib/index.js",
   "homepage": "https://github.com/paulcbetts/spawn-rx",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "debug": "^2.2.0",
-    "rx": "^4.0.7"
+    "babel-polyfill": "^6.13.0",
+    "debug-electron": "^0.0.1",
+    "rxjs": "^5.0.0-beta.11"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.4.3",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.2.0",
-    "esdoc": "^0.4.3",
+    "babel-cli": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-preset-es2016-node5": "^1.1.2",
+    "babel-register": "^6.11.6",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
-    "eslint": "^1.10.3",
-    "mocha": "^2.3.4"
+    "eslint": "^3.3.1",
+    "mocha": "^3.0.2"
   }
 }
