--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/paulcbetts/spawn-rx",
   "dependencies": {
     "debug-electron": "^0.0.1",
+    "lodash.omit": "^4.5.0",
+    "lodash.assign": "^4.2.0",
     "rxjs": "^5.0.0-beta.11"
   },
   "devDependencies": {
