--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spawn-rx",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "An Rx-version of child_process.spawn",
   "scripts": {
     "doc": "esdoc -c ./esdoc.json",
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/paulcbetts/spawn-rx",
   "dependencies": {
     "debug-electron": "^0.0.3",
-    "rxjs": "^5.0.0-rc.5"
+    "rxjs": "^5.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -38,7 +38,7 @@
     "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
-    "eslint": "^3.11.1",
+    "eslint": "^3.12.1",
     "mocha": "^3.2.0"
   }
 }
