--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "lib/index.js",
   "homepage": "https://github.com/paulcbetts/spawn-rx",
   "dependencies": {
-    "debug-electron": "^0.0.3",
+    "debug": "^2.5.1",
     "rxjs": "^5.0.0-rc.5"
   },
   "devDependencies": {
