--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,17 +4,15 @@ platform:
 
 environment:
   matrix:
+    - nodejs_version: "7"
     - nodejs_version: "6"
+    - nodejs_version: "4"
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
   - npm install
-  - where sleep
-  - where marked
-  - where uuid
 
 test_script:
-  # run tests
   - npm test
 
 build: off
