--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "tsc",
     "prepublish": "npm run compile",
     "lint": "tslint \"src/**/*.ts\" \"test/**/*.ts\"",
-    "test": "mocha --compilers ts:ts-node/register ./test/*"
+    "test": "mocha --compilers ts:ts-node/register ./test/*",
+    "build": "npm-run-all compile lint test"
   },
   "repository": {
     "type": "git",
@@ -43,6 +44,7 @@
     "esdoc-es7-plugin": "0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
     "mocha": "^3.2.0",
+    "npm-run-all": "^4.0.1",
     "ts-node": "^2.1.0",
     "tslint": "^4.4.2",
     "typescript": "^2.1.6"
