--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "moduleResolution": "node",
     "pretty": true,
     "target": "es5",
-    "outDir": "lib"
+    "outDir": "lib",
+    "lib": ["dom", "es2015"],
+    "types": ["node", "mocha", "chai"],
+    "typeRoots": ["node_modules/@types"]
   },
   "formatCodeOptions": {
     "indentSize": 2,
