--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "npm-run-all": "^4.0.2",
     "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
+    "tslint-no-unused-expression-chai": "^0.1.3",
     "typescript": "^2.5.3",
     "uuid": "3.0.1"
   }
