--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/anaisbetts/spawn-rx"
+    "url": "git+https://github.com/anaisbetts/spawn-rx.git"
   },
   "keywords": [
     "spawn",
