Migrate from npm to Bun
Replace npm with Bun as the package manager:

- Update scripts to use 'bun run' and 'bunx' instead of 'npm run' and 'npx'

- Replace npm-run-all with native shell operators (&&)

- Remove package-lock.json in favor of bun.lockb

- Update .gitignore to ignore bun.lockb

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "doc": "echo \"esdoc may not work correctly\" && esdoc -c ./esdoc.json",
     "compile": "tsc -p ./tsconfig.json",
-    "prepublishOnly": "npm run build",
-    "lint": "npx eslint .",
+    "prepublishOnly": "bun run build",
+    "lint": "bunx eslint .",
     "test": "mocha --compilers ts:ts-node/register ./test/*",
-    "build": "npm-run-all compile test"
+    "build": "bun run compile && bun run test"
   },
   "repository": {
     "type": "git",
