Fix TypeScript compilation issues
- Update @types/node to v22 to fix compatibility issues

- Add bun-types dependency for Bun test types

- Exclude test directory from TypeScript compilation

- Fix null check issue in src/index.ts by capturing stdin reference

--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
     "@types/debug": "^4.1.12",
-    "@types/node": "^8.10.66",
+    "@types/node": "^22.0.0",
     "babel-register": "^6.23.0",
+    "bun-types": "latest",
     "esdoc": "^1.1.0",
     "esdoc-es7-plugin": "0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
