--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "indentSize": 2,
     "tabSize": 2
   },
-  "exclude": ["node_modules", "lib"]
+  "exclude": ["node_modules", "lib", "test"]
 }
